books/projects/rac/tests/yaml_test/arithmetics/div-assign.ref.stderr
div-assign.cpp:5: syntax error, unexpected '='
