books/projects/rac/tests/yaml_test/arithmetics/div-assign.cpp
// RAC begin

int div(int a)
{
  a /= 2;
  return a;
}

// RAC end
